// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDiscountCode/> should not render when the popover is closed 1`] = `
<div>
  <span
    class="popoverWrapper"
  >
    <button
      class="wrapper button wrapper small fill secondary small"
      id="insert_discount_code"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </button>
    <div
      class="discountCodeToolTip p-0 d-flex popover top-left hidden"
    />
  </span>
</div>
`;

exports[`<AddDiscountCode/> should render the discount picker when the popover is clicked and only one integration 1`] = `
<div>
  <span
    class="popoverWrapper"
  >
    <button
      class="wrapper button wrapper small fill secondary small"
      id="insert_discount_code"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </button>
    <div
      class="discountCodeToolTip p-0 d-flex popover top-left"
    >
      <div
        class="discountLineContainer"
      >
        <div
          class="input-icon input-icon-left searchInput"
        >
          <i
            class="icon material-icons md-2"
          >
            search
          </i>
          <input
            class="form-control"
            placeholder="Search discount codes"
            type="text"
            value=""
          />
        </div>
        <div
          class="headerResult"
        >
          <div
            class="backContainer"
          >
            <button
              class="wrapper mr-2 fill primary small"
              tabindex="-1"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft small"
                >
                  add
                </i>
                Add
              </span>
            </button>
          </div>
          <div>
            <span
              class="headerText"
            >
              My Shop
            </span>
          </div>
          <div
            class="itemCount"
          >
            <span
              class="resultTotal"
            >
              0
              
               Discounts
            </span>
          </div>
        </div>
        <div
          class="listGroupContainer"
        >
          <div
            class="noResultContainer"
          >
            <p
              class="noResultText"
            >
              No results found
            </p>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`<AddDiscountCode/> should render the store picker because of multiple integrations 1`] = `
<div>
  <span
    class="popoverWrapper"
  >
    <button
      class="wrapper button wrapper small fill secondary small"
      id="insert_discount_code"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        discount
      </i>
    </button>
    <div
      class="discountCodeToolTip p-0 d-flex popover top-left"
    >
      <div
        class="discountLineContainer"
      >
        <ul
          class="list-group list-group-flush"
        >
          <button
            class="customListGroup list-group-item-action list-group-item"
          >
            <div
              class="integrationRowContainer"
            >
              <div
                class="integrationRow"
              >
                <img
                  alt="Logo"
                  class="shopifyLogo"
                  src="test-file-stub"
                />
                <span>
                  My Shop
                </span>
              </div>
              <i
                class="material-icons arrowIcon"
              >
                keyboard_arrow_right
              </i>
            </div>
          </button>
          <button
            class="customListGroup list-group-item-action list-group-item"
          >
            <div
              class="integrationRowContainer"
            >
              <div
                class="integrationRow"
              >
                <img
                  alt="Logo"
                  class="shopifyLogo"
                  src="test-file-stub"
                />
                <span>
                  My Shop
                </span>
              </div>
              <i
                class="material-icons arrowIcon"
              >
                keyboard_arrow_right
              </i>
            </div>
          </button>
        </ul>
      </div>
    </div>
  </span>
</div>
`;
